samples/_failures_safe/1761549428_5a9ffd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7bf1e706.c: In function ‘main’:
./samples/SAFE/__tmp_7bf1e706.c:141:58: error: missing terminating " character
  141 |     if (strlen(filter_level) > 0 && strcmp(filter_level, "
      |                                                          ^
./samples/SAFE/__tmp_7bf1e706.c:141:5: error: expected expression at end of input
  141 |     if (strlen(filter_level) > 0 && strcmp(filter_level, "
      |     ^~
./samples/SAFE/__tmp_7bf1e706.c:141:5: error: expected declaration or statement at end of input
